<resources>
    <string name="app_name">Дуэль</string>
    <string name="games">Игры</string>
    <string name="rating">Рейтинг</string>
    <string name="players">Игроки</string>
    <string name="choose_game_type">Выберите тип игры</string>
    <string name="stopwatch">Секундомер</string>
    <string name="duel">Дуэль</string>
    <string name="timer">Таймер</string>
    <string name="select_players">Выберите игроков</string>
    <string name="continued">Далее</string>
    <string name="add">Добавить</string>
    <string name="enter_name">Введите имя</string>
    <string name="delete">Удалить</string>
    <string name="create">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="change">Изменить</string>
    <string name="delete_player">Удалить игрока</string>
    <string name="change_name">Изменить имя</string>
    <string name="help">Помощь</string>
    <string name="repeat">Заново</string>
    <string name="soon">Скоро...</string>
    <string name="the_name_can_not_be_empty">Имя не может быть пустым</string>
    <string name="add_new_player">Добавить нового игрока</string>
    <string name="result">С результатом:</string>
    <string name="winner">Победитель</string>
    <string name="training">Тренировка</string>
    <string name="ads">Посмотрите пожалуйста рекламу\n(так вы поможете разработчику)</string>
    <string name="cooperation">Для сотрудничества с разработчиком\nпросто напишите (email)</string>
    <string name="other_developer_apps">Другие приложения разработчика</string>
    <string name="watch_ads">Посмотреть рекламу</string>
    <string name="write">Написать</string>
    <string name="about_developer">О разработчике</string>
    <string name="wins">Побед</string>
    <string name="best">Лучшее</string>
    <string name="this_is_not_difficult">Это не сложно</string>
    <string name="about_this_is_not_difficult">Данная игра распространяется абсолютно бесплатно, поэтому, если вы хотите поддержать разработчика, просмотрите пожалуйста рекламу нажав на кнопку \"Посмотреть рекламу\", и оставьте отзыв или оценку в Play Market нажав на кнопку \"Другие приложения разработчика\" и выбрав игру. Вам не сложно, а мне приятно)\nВсем удачи!</string>
    <string name="rules_duel">В игре принимает участие только 2 игрока. После отсчета времени каждый игрок, нажимая на своё имя, увеличивает размер своего игрового поля и уменьшает размер игрового поля соперника. Игра продолжается до разницы в 5 касаний.\nВперёд, чемпионы!</string>
    <string name="rules_timer">В игре принимает участие от 2 игроков и более. Суть игры заключается в том, чтобы остановить таймер как можно ближе к 0. Если игроков с одинаково лучшим счётом будет несколько, то игра продолжается уже между лучшими до выявления одного победителя.\nВперед, чемпионы!</string>
    <string name="rules_stopwatch">В игре принимает участие от 2 игроков и более. Суть игры заключается в том, чтобы набрать как можно больше очков за установленное время (5 секунд). Если в игре получилось больше одного игрока с лучшим результатом тура, то игра продолжается между лучшими игроками до выявления победителя.\nВперед, чемпионы!</string>
    <string name="rules_soon">Новый уровень скоро появится. Следите за обновлениями. Так же вы можете в комментариях к игре в Play Market написать пожелания к туру или предложить свой собственный тип игры.\nСделаем игру лучше ВМЕСТЕ!</string>
    <string name="cooperation_word">Сотрудничество</string>
    <string name="thank_you_for_watching_ads">Спасибо за просмотр рекламы</string>
    <string name="duel_rating">На первом месте игрок, у которого больше всего побед</string>
    <string name="timer_rating">На первом месте игрок, который остановил таймер ближе всего к 0</string>
    <string name="stopwatch_rating">На первом месте игрок, который набрал больше всего очков за один тур</string>
    <string name="stop">Стоп</string>
    <string name="time_is_over">Время вышло</string>
    <string name="duel_must_have_2_players">В игре Дуэль должно быть 2 игрока</string>
    <string name="minimum_2_players_can_play">Играть могут минимум 2 игрока</string>
    <string name="donation">Помощь</string>
    <string name="about_registration">Для того чтобы принимать участие в онлайн чемпионатах необходимо зарегистрироваться</string>
    <string name="sign_out">Выйти из аккаунта?</string>
    <string name="alert_sign_out">Выйдя из аккаунта вы не сможете принимать участие в онлайн соревнованиях</string>
    <string name="battle">Баттл</string>
    <string name="last">Последнее</string>
    <string name="b">Л</string>
    <string name="l">П</string>
    <string name="g">И</string>
    <string name="g_games">И - Игры</string>
    <string name="l_last">П - Последнее</string>
    <string name="b_best">Л - Лучшее</string>
    <string name="thanks">Благодарность</string>
    <string name="names_to_thanks" translatable="false">version 1.0.5\nViktoria Ikonnikova\nFedosenko Maksim\nDenis Baluev</string>
</resources>