<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_game"
        android:title="@string/games" />
    <item
        android:id="@+id/navigation_rating"
        android:icon="@drawable/ic_table"
        android:title="@string/rating" />
    <!--<item
        android:id="@+id/navigation_players"
        android:icon="@drawable/ic_add_person"
        android:title="@string/players" />-->
    <item
        android:id="@+id/navigation_championship"
        android:icon="@drawable/ic_baseline_people_outline_24"
        android:title="@string/battle" />
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_money_24"
        android:title="@string/help" />
</menu>