<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlayerInfoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="Bujhm"
        android:textSize="@dimen/top_text_size"
        android:layout_marginTop="@dimen/margin_top_player_name_info"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="Игр"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Побед"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="Лучший"
        app:layout_constraintEnd_toEndOf="@+id/player_name"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:dividerColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView7"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:dividerColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:text="@string/stopwatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stopwatch_all_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stopwatch_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stopwatch_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="35"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView6" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:dividerColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView8"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/duel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duel_all_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView7"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duel_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView7"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duel_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="35"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView7"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer_all_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView8"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="13"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView8"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="35"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView8"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView8" />

</androidx.constraintlayout.widget.ConstraintLayout>